Fixing JDK 1.4 compilation issues. (For some reason this is not being picked by NB and the source/target flags for compilation.
svn path=/trunk/; revision=699


Former-commit-id: 6f9cd2e8e1b007a9cbf81a541195fb3fc4e0caf6