@@ -92,12 +92,12 @@ public abstract class KeyIntMap {
     public KeyIntMap(int initialCapacity, float loadFactor) {
         if (initialCapacity < 0)
             throw new IllegalArgumentException(CommonResourceBundle.getInstance().
-                    getString("message.illegalInitialCapacity", new Object[]{Integer.valueOf(initialCapacity)}));
+                    getString("message.illegalInitialCapacity", new Object[]{new Integer(initialCapacity)}));
         if (initialCapacity > MAXIMUM_CAPACITY)
             initialCapacity = MAXIMUM_CAPACITY;
         if (loadFactor <= 0 || Float.isNaN(loadFactor))
             throw new IllegalArgumentException(CommonResourceBundle.getInstance().
-                    getString("message.illegalLoadFactor", new Object[]{Float.valueOf(loadFactor)}));
+                    getString("message.illegalLoadFactor", new Object[]{new Float(loadFactor)}));
 
         // Find a power of 2 >= initialCapacity
         if (initialCapacity != DEFAULT_INITIAL_CAPACITY) {
